# JureP-Diplomska

./: .gitignore  Problem_popolnega_pokritja.xopp  dlx_vc_results.xlsx  literatura.txt  queens_dlx_results.txt  queens_results.txt  queens_table.py  vc_dlx_averages.txt  vc_dlx_results.txt  vc_pure_dlx_averages.txt  vc_pure_dlx_results.txt  vc_reduce_dlx_averages.txt  vc_reduce_dlx_results.txt  vc_results.txt  vc_solver_averages.txt  vc_solver_results.txt  vc_table.py
dlx/: Cargo.toml  football.dimacs  instance.dimacs
dlx/libdlx/: Cargo.toml
dlx/libdlx/src/: dlx.rs  dlx2.rs  dlx3.rs  dlx_table.rs  dlx_table2.rs  dlxc.rs  exact_cover.rs  lib.rs  min_color_cost_dlxc.rs  min_cost_dlxc.rs  test_cases.rs  unsafe_dlx_table.rs  unsafe_dlx_table2.rs
dlx/src/: bipartite_matching.rs  cnf_sat.rs  dlx.rs  dlx_table.rs  exact_cover.rs  exact_cover2.rs  knapsack.rs  main.rs  queens.rs  sudoku.rs  vertex_cover.rs
dlx/src/sudoku/: mod.rs  sudoku.rs
queens/: execute_tests.sh  queens_table.py  run_dfs.sh  run_dlx.sh  run_dlx_random.sh  run_queens.py
queens/results/: queens_averages.txt  queens_dfs_results.txt  queens_dlx_random_results.txt  queens_dlx_results.txt
vc/: aggregate_dlx_results.py  aggregate_vc_results.py  execute_dense_dlx_tests.sh  execute_dlx_tests.sh  execute_small_tests.sh  execute_tests.sh  find_easy_instances.py  generate.py  generate_dlx_graphs.py  generate_graphs.py  generate_graphs.sh  generate_plots.sh  generate_small_graphs.py  run_dlx.sh  run_pure_dlx.sh  run_reduce_dlx.sh  run_solver.sh  run_vc.py  vc_plot.py
vc/instances/: graph100_1141.input  (+155 more)
(+12263 files in other folders)
