[package]
name = "dlx"
version = "0.1.0"
edition = "2018"
authors = ["Jure Pustoslemšek <jp9483@student.uni-lj.si>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
libdlx = { path = "libdlx" }
rand = "0.8.5"
itertools = "0.10.3"
